--- a/Resources/SharedResources.ru.resx
+++ b/Resources/SharedResources.ru.resx
@@ -117,17 +117,35 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Compare" xml:space="preserve">
+    <value>Поля {0} и {1} должны совпадать</value>
+  </data>
   <data name="ConfirmPassword" xml:space="preserve">
     <value>Подтверждение пароля</value>
+  </data>
+  <data name="DuplicateEmail" xml:space="preserve">
+    <value>Почта '{0}' уже используется</value>
+  </data>
+  <data name="DuplicateUserName" xml:space="preserve">
+    <value>Логин {0} уже занят</value>
   </data>
   <data name="Email" xml:space="preserve">
     <value>Электронная почта</value>
   </data>
+  <data name="EmailAddress" xml:space="preserve">
+    <value>Поле {0} должно быть корректным email-адресом</value>
+  </data>
   <data name="EmailOrUsername" xml:space="preserve">
     <value>Электронная почта или логин</value>
   </data>
+  <data name="InvalidEmail" xml:space="preserve">
+    <value>Почта '{0}' недопустима</value>
+  </data>
   <data name="InvalidLoginAttempt" xml:space="preserve">
     <value>Неверная попытка входа</value>
+  </data>
+  <data name="InvalidUserName" xml:space="preserve">
+    <value>Имя пользователя '{0}' недопустимо</value>
   </data>
   <data name="Login" xml:space="preserve">
     <value>Вход</value>
@@ -135,17 +153,50 @@
   <data name="Logout" xml:space="preserve">
     <value>Выход</value>
   </data>
+  <data name="MaxLength" xml:space="preserve">
+    <value>Поле {0} должно содержать не более  {1} символов</value>
+  </data>
+  <data name="MinLength" xml:space="preserve">
+    <value>Поле {0} должно содержать не менее {1} символов</value>
+  </data>
   <data name="Password" xml:space="preserve">
     <value>Пароль</value>
+  </data>
+  <data name="PasswordRequiresDigit" xml:space="preserve">
+    <value>Пароль должен содержать хотя бы одну цифру ('0'-'9')</value>
+  </data>
+  <data name="PasswordRequiresLower" xml:space="preserve">
+    <value>Пароль должен содержать хотя бы одну строчную букву ('a'-'z')</value>
+  </data>
+  <data name="PasswordRequiresNonAlphanumeric" xml:space="preserve">
+    <value>Пароль должен содержать хотя бы один неалфавитный символ</value>
+  </data>
+  <data name="PasswordRequiresUpper" xml:space="preserve">
+    <value>Пароль должен содержать хотя бы одну заглавную букву ('A'-'Z')</value>
+  </data>
+  <data name="PasswordTooShort" xml:space="preserve">
+    <value>Пароль должен быть не менее {0} символов</value>
   </data>
   <data name="Profile" xml:space="preserve">
     <value>Профиль</value>
   </data>
+  <data name="RecoveryCodeRedemptionFailed" xml:space="preserve">
+    <value>Сбой при использовании кода восстановления</value>
+  </data>
   <data name="Register" xml:space="preserve">
     <value>Регистрация</value>
   </data>
+  <data name="Required" xml:space="preserve">
+    <value>Поле {0} обязательно для заполнения</value>
+  </data>
   <data name="SwitchTheme" xml:space="preserve">
     <value>Переключить тему</value>
+  </data>
+  <data name="UserAlreadyHasPassword" xml:space="preserve">
+    <value>У пользователя уже есть пароль</value>
+  </data>
+  <data name="UserLockoutNotEnabled" xml:space="preserve">
+    <value>Блокировка не включена для этого пользователя</value>
   </data>
   <data name="Username" xml:space="preserve">
     <value>Логин</value>
