--- a/Resources/SharedResources.en.resx
+++ b/Resources/SharedResources.en.resx
@@ -120,6 +120,9 @@
   <data name="Actions" xml:space="preserve">
     <value>Actions</value>
   </data>
+  <data name="AdminPanel" xml:space="preserve">
+    <value>Admin panel</value>
+  </data>
   <data name="Block" xml:space="preserve">
     <value>Block user</value>
   </data>
