--- a/Resources/SharedResources.en.resx
+++ b/Resources/SharedResources.en.resx
@@ -117,14 +117,38 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AccessType" xml:space="preserve">
+    <value>Access type</value>
+  </data>
   <data name="Actions" xml:space="preserve">
     <value>Actions</value>
+  </data>
+  <data name="AddQuestion" xml:space="preserve">
+    <value>Add question</value>
   </data>
   <data name="AdminPanel" xml:space="preserve">
     <value>Admin panel</value>
   </data>
+  <data name="AllowedUsers" xml:space="preserve">
+    <value>Allowed users</value>
+  </data>
+  <data name="AnsweredForms" xml:space="preserve">
+    <value>Answers</value>
+  </data>
+  <data name="Answers" xml:space="preserve">
+    <value>Answers</value>
+  </data>
   <data name="Block" xml:space="preserve">
     <value>Block user</value>
+  </data>
+  <data name="Checkbox" xml:space="preserve">
+    <value>Checkbox</value>
+  </data>
+  <data name="Comma-SeparatedTags" xml:space="preserve">
+    <value>Comma-separated tags</value>
+  </data>
+  <data name="Comma-SeparatedUserNames" xml:space="preserve">
+    <value>Comma-separated usernames</value>
   </data>
   <data name="Compare" xml:space="preserve">
     <value>The {0} and {1} fields must match</value>
@@ -132,8 +156,23 @@
   <data name="ConfirmPassword" xml:space="preserve">
     <value>Confirm Password</value>
   </data>
+  <data name="CreatedBy" xml:space="preserve">
+    <value>Created by</value>
+  </data>
+  <data name="CreatedForms" xml:space="preserve">
+    <value>Created forms</value>
+  </data>
+  <data name="CreateForm" xml:space="preserve">
+    <value>Create form</value>
+  </data>
   <data name="Delete" xml:space="preserve">
     <value>Delete user</value>
+  </data>
+  <data name="DeleteAnswer" xml:space="preserve">
+    <value>Delete answer</value>
+  </data>
+  <data name="Description" xml:space="preserve">
+    <value>Description</value>
   </data>
   <data name="DuplicateEmail" xml:space="preserve">
     <value>Email '{0}' is already taken</value>
@@ -146,6 +185,24 @@
   </data>
   <data name="EmailAddress" xml:space="preserve">
     <value>The {0} field must be a valid email address</value>
+  </data>
+  <data name="English" xml:space="preserve">
+    <value>English</value>
+  </data>
+  <data name="FillAnswers" xml:space="preserve">
+    <value>Please fill out the answers to the questions below</value>
+  </data>
+  <data name="FillForm" xml:space="preserve">
+    <value>Fill form</value>
+  </data>
+  <data name="Forms" xml:space="preserve">
+    <value>Forms</value>
+  </data>
+  <data name="General" xml:space="preserve">
+    <value>General</value>
+  </data>
+  <data name="ImageURL" xml:space="preserve">
+    <value>Image URL</value>
   </data>
   <data name="InvalidEmail" xml:space="preserve">
     <value>The email '{0}' is invalid</value>
@@ -177,6 +234,18 @@
   <data name="MinLength" xml:space="preserve">
     <value>The field {0} must be at least {1} characters long</value>
   </data>
+  <data name="MultiLineText" xml:space="preserve">
+    <value>Multi-line text</value>
+  </data>
+  <data name="NoAnswers" xml:space="preserve">
+    <value>You haven't answered this form yet</value>
+  </data>
+  <data name="NoCreated" xml:space="preserve">
+    <value>You haven't created any form yet</value>
+  </data>
+  <data name="Number" xml:space="preserve">
+    <value>Number</value>
+  </data>
   <data name="Password" xml:space="preserve">
     <value>Password</value>
   </data>
@@ -198,11 +267,23 @@
   <data name="Profile" xml:space="preserve">
     <value>Profile</value>
   </data>
+  <data name="Public" xml:space="preserve">
+    <value>Public</value>
+  </data>
+  <data name="Questions" xml:space="preserve">
+    <value>Questions</value>
+  </data>
+  <data name="QuestionText" xml:space="preserve">
+    <value>Question text</value>
+  </data>
   <data name="RecoveryCodeRedemptionFailed" xml:space="preserve">
     <value>Recovery code redemption failed</value>
   </data>
   <data name="Register" xml:space="preserve">
     <value>Register</value>
+  </data>
+  <data name="Remove" xml:space="preserve">
+    <value>Remove</value>
   </data>
   <data name="RemoveAdmin" xml:space="preserve">
     <value>Remove admin role</value>
@@ -210,8 +291,47 @@
   <data name="Required" xml:space="preserve">
     <value>The {0} field is required</value>
   </data>
+  <data name="Restricted" xml:space="preserve">
+    <value>Restricted</value>
+  </data>
+  <data name="Results" xml:space="preserve">
+    <value>Results</value>
+  </data>
+  <data name="Russian" xml:space="preserve">
+    <value>Russian</value>
+  </data>
+  <data name="Save" xml:space="preserve">
+    <value>Save</value>
+  </data>
+  <data name="Search" xml:space="preserve">
+    <value>Search</value>
+  </data>
+  <data name="ShowInResults" xml:space="preserve">
+    <value>Show in results</value>
+  </data>
+  <data name="SingleLineText" xml:space="preserve">
+    <value>Single-line text</value>
+  </data>
+  <data name="Statistics" xml:space="preserve">
+    <value>Statistics</value>
+  </data>
+  <data name="Submit" xml:space="preserve">
+    <value>Submit</value>
+  </data>
+  <data name="SubmitAnswers" xml:space="preserve">
+    <value>Submit answers</value>
+  </data>
+  <data name="SubmittedAt" xml:space="preserve">
+    <value>Submitted at</value>
+  </data>
   <data name="SwitchTheme" xml:space="preserve">
     <value>Switch Theme</value>
+  </data>
+  <data name="Tags" xml:space="preserve">
+    <value>Tags</value>
+  </data>
+  <data name="Title" xml:space="preserve">
+    <value>Title</value>
   </data>
   <data name="Unblock" xml:space="preserve">
     <value>Unblock user</value>
@@ -227,5 +347,11 @@
   </data>
   <data name="UserNameOrEmail" xml:space="preserve">
     <value>Username or Email</value>
+  </data>
+  <data name="View" xml:space="preserve">
+    <value>View</value>
+  </data>
+  <data name="YourAnswers" xml:space="preserve">
+    <value>Your answers</value>
   </data>
 </root>
