--- a/Resources/SharedResources.en.resx
+++ b/Resources/SharedResources.en.resx
@@ -234,11 +234,26 @@
   <data name="MakeAdmin" xml:space="preserve">
     <value>Grant admin role</value>
   </data>
+  <data name="Max" xml:space="preserve">
+    <value>Maximal</value>
+  </data>
   <data name="MaxLength" xml:space="preserve">
     <value>The field {0} must be not greater than {1} characters long</value>
   </data>
+  <data name="Mean" xml:space="preserve">
+    <value>Mean</value>
+  </data>
+  <data name="Median" xml:space="preserve">
+    <value>Median</value>
+  </data>
+  <data name="Min" xml:space="preserve">
+    <value>Minimal</value>
+  </data>
   <data name="MinLength" xml:space="preserve">
     <value>The field {0} must be at least {1} characters long</value>
+  </data>
+  <data name="MostFrequentAnswer" xml:space="preserve">
+    <value>Most frequent answer</value>
   </data>
   <data name="MultiLineText" xml:space="preserve">
     <value>Multi-line text</value>
@@ -282,6 +297,9 @@
   <data name="Questions" xml:space="preserve">
     <value>Questions</value>
   </data>
+  <data name="QuestionsStatistics" xml:space="preserve">
+    <value>Statistics on questions</value>
+  </data>
   <data name="QuestionText" xml:space="preserve">
     <value>Question text</value>
   </data>
@@ -315,6 +333,9 @@
   <data name="Search" xml:space="preserve">
     <value>Search</value>
   </data>
+  <data name="SelectionPrecentage" xml:space="preserve">
+    <value>Percentage of selection</value>
+  </data>
   <data name="ShowInResults" xml:space="preserve">
     <value>Show in results</value>
   </data>
@@ -323,6 +344,9 @@
   </data>
   <data name="Statistics" xml:space="preserve">
     <value>Statistics</value>
+  </data>
+  <data name="StdDev" xml:space="preserve">
+    <value>Standard deviation</value>
   </data>
   <data name="Submit" xml:space="preserve">
     <value>Submit</value>
