--- a/Resources/SharedResources.ru.resx
+++ b/Resources/SharedResources.ru.resx
@@ -234,11 +234,26 @@
   <data name="MakeAdmin" xml:space="preserve">
     <value>Выдать права администратора</value>
   </data>
+  <data name="Max" xml:space="preserve">
+    <value>Максимальный</value>
+  </data>
   <data name="MaxLength" xml:space="preserve">
     <value>Поле {0} должно содержать не более  {1} символов</value>
   </data>
+  <data name="Mean" xml:space="preserve">
+    <value>Математическое ожидание</value>
+  </data>
+  <data name="Median" xml:space="preserve">
+    <value>Медиана</value>
+  </data>
+  <data name="Min" xml:space="preserve">
+    <value>Минимальный</value>
+  </data>
   <data name="MinLength" xml:space="preserve">
     <value>Поле {0} должно содержать не менее {1} символов</value>
+  </data>
+  <data name="MostFrequentAnswer" xml:space="preserve">
+    <value>Самый частый ответ</value>
   </data>
   <data name="MultiLineText" xml:space="preserve">
     <value>Многострочный текст</value>
@@ -282,6 +297,9 @@
   <data name="Questions" xml:space="preserve">
     <value>Вопросы</value>
   </data>
+  <data name="QuestionsStatistics" xml:space="preserve">
+    <value>Статистика по вопросам</value>
+  </data>
   <data name="QuestionText" xml:space="preserve">
     <value>Текст вопроса</value>
   </data>
@@ -315,6 +333,9 @@
   <data name="Search" xml:space="preserve">
     <value>Поиск</value>
   </data>
+  <data name="SelectionPercentage" xml:space="preserve">
+    <value>Процент выбора</value>
+  </data>
   <data name="ShowInResults" xml:space="preserve">
     <value>Показывать в результатах</value>
   </data>
@@ -323,6 +344,9 @@
   </data>
   <data name="Statistics" xml:space="preserve">
     <value>Статистика</value>
+  </data>
+  <data name="StdDev" xml:space="preserve">
+    <value>Среднеквадратическое отклонение</value>
   </data>
   <data name="Submit" xml:space="preserve">
     <value>Подтвердить</value>
