--- a/Resources/SharedResources.en.resx
+++ b/Resources/SharedResources.en.resx
@@ -147,6 +147,9 @@
   <data name="AreYouSure?" xml:space="preserve">
     <value>Are you sure?</value>
   </data>
+  <data name="Author" xml:space="preserve">
+    <value>Author</value>
+  </data>
   <data name="Block" xml:space="preserve">
     <value>Block user</value>
   </data>
@@ -290,6 +293,9 @@
   </data>
   <data name="Like" xml:space="preserve">
     <value>Like</value>
+  </data>
+  <data name="Likes" xml:space="preserve">
+    <value>Likes</value>
   </data>
   <data name="LikesCount" xml:space="preserve">
     <value>Likes count</value>
