Added a view for Search Fixed Migrations/20241218172913_fulltextsearch.cs

--- a/Resources/SharedResources.en.resx
+++ b/Resources/SharedResources.en.resx
@@ -426,6 +426,9 @@
   <data name="Search" xml:space="preserve">
     <value>Search</value>
   </data>
+  <data name="SearchResults" xml:space="preserve">
+    <value>Search results</value>
+  </data>
   <data name="SelectFile" xml:space="preserve">
     <value>Select a file</value>
   </data>
